<resources>
    <string name="app_name">Music</string>
    
    <string name="ttLogin">登录</string>
    <string name="ttRegister">注册</string>
    <string name="ttBindNetnese">绑定网易云账号</string>

    <string name="tab_home">我的</string>
    <string name="tab_recommend">推荐</string>
    
    <string name="tvLogin">登录</string>
    <string name="tvRegister">注册账号</string>
    <string name="tvBindNetnese">绑定网易云</string>
    <string name="tvLogout">注销</string>

    <string name="hintAccount">请输入账户名</string>
    <string name="hintPaswd">请输入密码</string>
    <string name="hintRePaswd">请再次输入密码</string>
    <string name="hintNetneseName">请输入网易云昵称</string>
    
    <string name="btnLogin">登录</string>
    <string name="btnRegister">注册账号</string>
    <string name="btnBindNetnese">绑定网易云账号</string>

    <string name="menu_forget_paswd">忘记密码？</string>

    <string name="tsAccountMin">账号不可小于6位</string>
    <string name="tsAccountMax">账号不可大于12位</string>
    <string name="tsPaswdMin">密码不可小于6位</string>
    <string name="tsPaswdMax">密码不可大于18位</string>
    <string name="tsPaswdEqual">两次输入密码不一致</string>
    <string name="tsNetneseMin">你逗我呢，不存在昵称小于2位的用户</string>
    <string name="tsNetneseMax">你逗我呢，不存在昵称大于30位的用户</string>
</resources>
