<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/llUser"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/colorPrimary">
        <com.chenyuwei.loadimageview.LoadImageView
            android:id="@+id/ivAvatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            app:shape="circle"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivAvatar"
            android:padding="6dp"
            android:text="ViVi虚拟机"
            android:textColor="@color/textWhite"
            android:textSize="@dimen/tvMin"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_btn2"
            android:text="@string/btnLogin"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvBindNetnese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvBindNetnese"
                android:textSize="@dimen/tvMax"
                android:gravity="center"
                android:padding="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bgLine"/>
            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvLogout"
                android:textSize="@dimen/tvMax"
                android:gravity="center"
                android:padding="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bgLine"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>